# TRRW-Chrome-Extension-Template

./: .gitattributes  .gitignore  .prettierrc  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: test.yml
config/: config-overrides.js  webpack.config.js
public/: insert.js  manifest.json
rust-wasm/: Cargo.toml  README.md
rust-wasm/src/: lib.rs
scripts/: build.js
server/: build.ts  buildWasm.ts  generateManifest.ts  generateWasm.ts  watcher.ts
server/configs/: webpack.common.ts  webpack.prod.ts
server/utils/: args.ts  constants.ts  path.ts
src/: App.tsx  index.tsx  manifest.ts  react-app-env.d.ts
src/api/: index.tsx
src/background/: index.ts  index.tsx
src/bgfetch/: bgfetch.ts
src/content/: content.less  index.tsx  rtce-antd.less
src/contents/all/: index.tsx  style.scss
src/network/: index.tsx
src/popup/: App.tsx  index.tsx
src/popup/pages/: hello.tsx  home.tsx
src/rust-wasm/: Cargo.toml  README.md  build.js  index.js
src/rust-wasm/pkg/: package.json  rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.js  rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
src/rust-wasm/src/: lib.rs
src/wasm/: package.json  wasm_bg.js  wasm_bg.wasm
wasm/: Cargo.toml
